--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
+    font-family: Tamil MN;
+  
 }
 body{
 
@@ -36,6 +37,7 @@ align-items: center;
     width: 600px;
     justify-content: space-between;
     height: 500px;
+   
  
 }
 .nav a {
@@ -45,12 +47,56 @@ align-items: center;
 
 .nav a:hover {
 
-    background-color: #5B5B5B;;
+    background-color: #5B5B5B;
     color: white;
 }
 .main {
     display:flex;
 }
-.left {
-    flex: 2;
+.hero {
+    
+    gap: 100px;
+
 }
+.hero-text {
+    font-weight: 800;
+    font-size: 70px;
+
+    flex: 1;
+}
+.hero-description {
+    display: flex;
+flex: 2;
+flex-direction: column;
+justify-content: space-between;
+}
+h3{
+    color: #777777;
+    line-height: 30px;
+    font-family: Tamil MN;
+   font-size: ;
+    text-align: left;
+    line-height: 50px;
+   
+}
+h1{
+    text-align: left;
+}
+.btn {
+     margin-top: 15px;
+    width: 20%;
+    background: #D5CFC6;
+    padding: 20px;
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 4px;
+    
+    
+}
+.btn:hover {
+background-color: white;
+color: #D5CFC6;
+}
+
+
