--- a/style blog.css
+++ b/style blog.css
@@ -5,6 +5,14 @@
     font-family: Tamil MN;
 
 }
+img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .picture1{
+    height: 100px;
+
+  }
 body{
 
     background-color:#BDBFBF ;
@@ -22,7 +30,12 @@ a {
 }
 .container {
     width: 1300px;
-    margin: 40px auto;
+    margin: 40px;
+    margin-right: 40px;
+    position: static;
+    float: right;
+    max-width: ;
+    
 }
 
 .header {
@@ -31,12 +44,20 @@ margin-top: 50px;
 display: flex;
 justify-content: space-between;
 align-items: center;
+padding-right: 300px;
+margin: 0px auto;
+        width: 1300px;
+        height: 50px;
+        background-color: #a2a2a3;
+        padding: 50px;
+        display: flex;
+        width: 100%;
+
 }
 .nav {
     display: flex;
     width: 600px;
     justify-content: space-between;
-    height: 500px;
    
  
 }
@@ -47,14 +68,90 @@ align-items: center;
 
 .nav a:hover {
 
-    background-color: #5B5B5B;
-    color: white;
+    color: #5B5B5B;
 }
 h1 {
-    text-align: right;
+        font-size: 40px;
     color: white;
 }
 h3 {
-    text-align: right;
+
+        color: #777777;
+        line-height: 45px;
+        font-family: Tamil MN;
+        text-align: left;
+
+    
   
 }
+.main {
+    display:flex;
+}
+.hero-description {
+    display: flex;
+flex: 2;
+flex-direction: column;
+justify-content: space-between;
+margin-left: 800px;
+
+
+}
+.btn {
+    display: flex;
+    margin-top: 40%;
+    width: 20 0px;
+    background: #D5CFC6;
+    padding: 20px;
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+    
+    margin-left: 70%;
+    border-radius: 15px;
+    position: absolute;
+    bottom: -25%;
+}
+.btn:hover {
+background-color: white;
+color: #D5CFC6;
+}
+
+     .container main {
+
+       width: 30%;
+       min-height: 100vh;
+       display: flex;
+        align-items: center;
+       
+     }
+     .containerg {
+        max-width: 1350px;
+        margin: auto;
+        background: #707070;
+    }
+    .gallery {
+        margin: 5px;
+        border: -3px solid #6E7349;
+        float: left;
+        width: 440px;
+        
+        
+        margin-top: 
+    }
+    .gallery img {
+        width: 100%;
+        height: auto;
+        
+    }
+    .desc {
+        padding: 15px;
+        text-align: center;
+        
+    }
+    .main, h1, h3 {
+        
+      
+        max-width: 400px;
+        margin-left: -800px;
+        
+     }
