--- a/style contact.css
+++ b/style contact.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Tamil MN;
-
+  
 }
 body{
 
@@ -20,23 +20,35 @@ a {
     text-decoration: none;
     color: inherit;
 }
-.container {
-    width: 1300px;
-    margin: 40px auto;
-}
+img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .picture1{
+   
+    height: 100px;
+    padding-right: 50px;
 
-.header {
-
-margin-top: 50px;
+  }
+  .header {
+    margin-top: 50px;
 display: flex;
 justify-content: space-between;
 align-items: center;
+padding-right: 300px;
+margin: 0px auto;
+        width: 1300px;
+        height: 50px;
+        background-color: #a2a2a3;
+        padding: 50px;
+        display: flex;
+        width: 100%;
+
 }
 .nav {
     display: flex;
     width: 600px;
     justify-content: space-between;
-    height: 500px;
    
  
 }
@@ -46,7 +58,5 @@ align-items: center;
 }
 
 .nav a:hover {
-
-    background-color: #5B5B5B;
-    color: white;
+    color: #5B5B5B;
 }
