--- a/style.css
+++ b/style.css
@@ -20,23 +20,42 @@ a {
     text-decoration: none;
     color: inherit;
 }
-.container {
+img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .picture1{
+   
+    height: 100px;
+
+  }
+
+  .container {
     width: 1300px;
-    margin: 40px auto;
+    margin: 40px ;
+    margin-right: 40px;
+    position: static;
+    float: right;
 }
-
 .header {
-
-margin-top: 50px;
+    margin-top: 50px;
 display: flex;
 justify-content: space-between;
 align-items: center;
+padding-right: 300px;
+margin: 0px auto;
+        width: 1300px;
+        height: 50px;
+        background-color: #a2a2a3;
+        padding: 50px;
+        display: flex;
+        width: 100%;
+
 }
 .nav {
     display: flex;
     width: 600px;
     justify-content: space-between;
-    height: 500px;
    
  
 }
@@ -46,9 +65,7 @@ align-items: center;
 }
 
 .nav a:hover {
-
-    background-color: #5B5B5B;
-    color: white;
+    color: #5B5B5B;
 }
 .main {
     display:flex;
@@ -59,9 +76,9 @@ align-items: center;
 
 }
 .hero-text {
-    font-weight: 800;
-    font-size: 70px;
-
+    text-align: left;
+    text-decoration: overline;
+    margin-left: 500px;
     flex: 1;
 }
 .hero-description {
@@ -69,29 +86,33 @@ align-items: center;
 flex: 2;
 flex-direction: column;
 justify-content: space-between;
+margin-left: 500px;
+
 }
 h3{
     color: #777777;
-    line-height: 30px;
+    line-height: 40px;
     font-family: Tamil MN;
-   font-size: ;
     text-align: left;
-    line-height: 50px;
    
 }
+
 h1{
-    text-align: left;
+    font-size: 70px;
 }
 .btn {
-     margin-top: 15px;
-    width: 20%;
+     margin-top: -15px;
+    width: 200px;
     background: #D5CFC6;
     padding: 20px;
     text-align: center;
     text-transform: uppercase;
     color: white;
-    letter-spacing: 4px;
-    
+    margin: 100px ;
+    margin-left: 44.5%;
+    margin: -3px ;
+    margin-top: -280px;
+    border-radius: 15px;
     
 }
 .btn:hover {
@@ -99,4 +120,35 @@ background-color: white;
 color: #D5CFC6;
 }
 
+      .container main {
 
+        width: 30%;
+        min-height: 100vh;
+        display: flex;
+         align-items: center;
+        
+      }
+      
+        
+      .picture1 {
+        padding-right: 50px;
+      
+      }
+.h1.hero-text {
+    text-align: right;
+}
+.zaha-jewelery {
+    width: 400px;
+    position: relative;
+    right : 800px;
+    bottom: 1200px;
+
+}
+
+.jew {
+width: 100%;
+display: block;
+margin-left: -75%;
+width: 500px;
+margin-top: -52%;
+}
