--- a/style blog.css
+++ b/style blog.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Tamil MN;
-
+    
 }
 img {
     max-width: 100%;
@@ -106,7 +106,7 @@ margin-left: 800px;
     text-transform: uppercase;
     color: white;
     
-    margin-left: 70%;
+    margin-left: 60%;
     border-radius: 15px;
     position: absolute;
     bottom: -25%;
@@ -147,6 +147,7 @@ color: #D5CFC6;
         padding: 15px;
         text-align: center;
         
+        
     }
     .main, h1, h3 {
         
@@ -154,4 +155,17 @@ color: #D5CFC6;
         max-width: 400px;
         margin-left: -800px;
         
+     }
+     .gallery {
+        margin-top: 200px;
+        border: 6px solid grey;
+        margin-left: -0px;
+        
+        
+     }
+     .desc1 {
+        padding: 3px;
+        text-align: center;
+        text-decoration: underline;
+
      }
