--- a/style contact.css
+++ b/style contact.css
@@ -3,11 +3,13 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Tamil MN;
-  
+    scroll-behavior: smooth;
+
 }
 body{
 
     background-color:#BDBFBF ;
+
     font-family: Tamil MN;
     
 
@@ -60,3 +62,149 @@ margin: 0px auto;
 .nav a:hover {
     color: #5B5B5B;
 }
+.contact-section {
+    background: #BDBFBF;
+    background-size: cover;
+    padding: 110px 39px;
+}
+.contact-section {
+    text-align: center;
+    color: rgb(0, 0, 0);
+}
+
+.border {
+    width: 100px;
+    height: 10px;
+    background: #90917B;
+    margin: 40px auto;
+}
+
+.contact-form{
+    max-width: 600px;
+    margin: auto;
+    padding: 0 10px;
+    overflow: hidden;
+margin-top: -5%;
+}
+
+.contact-form-text {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 16px 0;
+    border: 0;
+    background: white;
+    padding: 20px 40px;
+    outline: none;
+    color: #DDD;
+    transition: 0.5s;
+
+}
+.contact-form-text:focus {
+    box-shadow: 0 0 10px 4px #D4CEC5}
+  textarea.contact-form-text {
+    resize: none;
+    height: 120px;
+}
+.contact-form-btn {
+    float: left;
+    border: 0;
+    background:  white;
+    color: #D4CEC5;
+padding: 12px 50px;
+border-radius: 20px;
+cursor: pointer;
+transition: 0.5s;
+
+}
+.contact-form-btn:hover {
+    background: #D4CEC5;
+    color: white;
+}
+h1 {
+    font-family: Tamil MN;
+    margin: 8px auto;
+text-align: center;
+    font-size: 40px;
+    max-width: 500px;
+        position: relative;
+    
+    
+}
+h1::before {
+    content: "";
+    display: block;
+    width: 120px;
+    height: 2px;
+    background: #000;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    z-index: -2;
+}
+h1::after {
+    content: "";
+    display: block;
+    width: 120px;
+    height: 2px;
+    background: #000;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    z-index: -2;
+}
+body{
+    background: #fcfcfc;
+}
+footer{
+    position: fixed;
+   
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #D9D9D9;
+    height: auto;
+    width: 100vw;
+    font-family: "Tamil MN";
+    padding-top: 40px;
+    color: #fff;
+   
+}
+.footer-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+.footer-content h3{
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 3rem;
+}
+.footer-content p{
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+}
+
+
+.footer-bottom{
+    background: #000;
+    width: 100vw;
+    padding: 20px 0;
+    text-align: center;
+}
+.footer-bottom p{
+    font-size: 14px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+}
+.footer-bottom span{
+    text-transform: uppercase;
+    opacity: .4;
+    font-weight: 200;
+}
+
